# pixiv-bulk-downloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bookmark_downloader.py  client.sample.json  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
pbd/: __init__.py  auth.py  base.py  bookmarks.py  followings.py  main.py  pixiv_types.py  types.py
pixiv_bulk_downloader/: __init__.py  base.py  bookmarks.py  followings.py  main.py  pixiv_types.py
pixiv_bulk_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
