[metadata]
name = pixiv_bulk_downloader
version = attr: pbd.__version__
description = Pixiv Bulk Downloader for bookmarks and works of followed authors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/pixiv-bulk-downloader
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PixivPy3>=3.7.1
    gppt>=2.1.1
    pwinput>=1.0.2
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    pbd = pbd.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
pbd = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
